# palace

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  palace.cpp
ext/: CMakeLists.txt
graphics/: CMakeLists.txt  include.hpp  sdl.hpp  sdl2.hpp  vk.hpp  vulkan.cpp  vulkan.hpp  vulkandebug.cpp  vulkandebug.hpp  vulkandevice.cpp  vulkandevice.hpp  vulkaninstance.cpp  vulkaninstance.hpp
models/: Avocado.glb
shaders/: f_triangle.frag  fragment.frag  shadow.vert  v_triangle.vert  vertex.vert
source/: CMakeLists.txt  palace.cpp
source/engine/: CMakeLists.txt  commandlineparser.cpp  commandlineparser.hpp  vulkan.cpp  vulkan.hpp
source/engine/vk_/: CMakeLists.txt  buffer.cpp  buffer.hpp  debug.cpp  debug.hpp  device.cpp  device.hpp  include.hpp  log.hpp  pipeline.cpp  pipeline.hpp  primitive.hpp  sdl2.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp
source/graphics/: CMakeLists.txt  commandlineparser.hpp  vulkan.cpp  vulkan.hpp  vulkandebug.cpp  vulkandebug.hpp  vulkandevice.cpp  vulkandevice.hpp  vulkaninclude.hpp  vulkaninstance.cpp  vulkaninstance.hpp  vulkanpipeline.cpp  vulkanpipeline.hpp  vulkanswapchain.cpp  vulkanswapchain.hpp
source/graphics/vk_/: CMakeLists.txt  buffer.cpp  buffer.hpp  constants.hpp  debug.cpp  debug.hpp  device.cpp  device.hpp  imgui.cpp  imgui.hpp  log.cpp  log.hpp  pipeline.cpp  pipeline.hpp  scene.cpp  scene.hpp  sdl2.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  vertex.hpp
source/util/: CMakeLists.txt  parser.cpp  parser.hpp
src/: CMakeLists.txt  camera.hpp  engine.cpp  engine.hpp  gltf.cpp  gltf.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  log.cpp  log.hpp  main.cpp  memory.cpp  palace.cpp  palace.hpp  types.hpp  ui.cpp  ui.hpp  vktypes.hpp
src-refactor/: engine.cpp  engine.hpp  input.cpp  input.hpp  main.cpp  ui.cpp  ui.hpp  vktypes.cpp
src/gltf/: CMakeLists.txt  mesh.hpp  scene.cpp  scene.hpp  vertex.hpp
src/util/: CMakeLists.txt  log.cpp  parser.cpp  parser.hpp
src/vk/: CMakeLists.txt  camera.hpp  gltf.cpp  gltf.hpp  memory.cpp  memory.hpp  pipelines.cpp  pipelines.hpp  types.hpp  vulkan.cpp  vulkan.hpp
src2/: CMakeLists.txt  engine.cpp  memory.hpp  parser.hpp  ui.hpp
