add_library(vk_
        "buffer.cpp"
        "debug.cpp"
        "device.cpp"
        "imgui.cpp"
        "log.cpp"
        "pipeline.cpp"
        "scene.cpp"
        "swapchain.cpp"
        "texture.cpp")
target_link_libraries(vk_
        imgui
        Vulkan::Vulkan
        SDL2::SDL2
        tinyobjloader
        tinygltf)
